--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,10 +1,13 @@
-/*Home*/
+body {
+    background-color: #FFFDDE;
+}
 
-.Home{
-    width:100%;
-    margin:0 auto;
-    min-height:100vh;
-    display:flex;
+/*Home*/
+.Home {
+    width: 100%;
+    margin: 0 auto;
+    min-height: 100vh;
+    display: flex;
     align-items: center;
     justify-content: center;
     background-color: #FFFDDE;
@@ -12,15 +15,14 @@
 
 
 #body {
-    background-color: #FFFDDE;
-    min-height:100vh;
     padding-top: 5%;
-    width: 100%;
+    padding-bottom: 10%;
+    min-height: 100vh
 }
 
 #cardMellow {
     padding-top: 100px;
-    
+
 }
 
 #mellowVerde {
@@ -29,7 +31,7 @@
     padding-top: 10px;
 }
 
-.card-img-top{
+.card-img-top {
     width: 62%;
     height: 60%;
     margin: auto;
@@ -46,7 +48,7 @@
 
 
 /*Troca de livros*/
-#jumbo{
+#jumbo {
     background-color: #FFCBCB;
     width: 80%;
     display: block;
@@ -56,8 +58,8 @@
     border-radius: 10px;
 }
 
-#jumboTitle{
-    color:#FFFDDE;
+#jumboTitle {
+    color: #FFFDDE;
     font-weight: bold;
     text-align: center;
     padding-bottom: 2.4rem;
@@ -69,60 +71,61 @@
     margin-left: 45%;
 }
 
-.offcanvas{
+.offcanvas {
     background-color: #D9D7F1;
 }
 
-#lista{
+#lista {
     text-decoration: none !important;
     list-style: none !important;
     color: black;
 }
 
-#mellow{
+#mellow {
     margin-left: 30%;
     height: 10rem;
 }
 
-.flex-container{
+.flex-container {
     display: grid;
     justify-content: center;
     justify-items: center;
-    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
-    
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+
 }
 
-#cardPrincipal{
+#cardPrincipal {
     width: auto;
     background-color: white;
     border: none;
 }
 
-#cardImg{
-    width: 30%; 
+#cardImg {
+    width: 30%;
     margin-left: auto;
     margin-right: auto;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-#input{
+
+#input {
     width: 30%;
     margin: 2px;
     margin-bottom: 5px;
 }
 
-#btnDown1{
+#btnDown1 {
     background-color: transparent;
 }
 
-#btnDown2{
+#btnDown2 {
     background-color: transparent;
 }
 
-#btnDown3{
+#btnDown3 {
     background-color: transparent;
 }
 
-#btnInput{
+#btnInput {
     background-color: transparent;
 }
 
@@ -138,11 +141,11 @@
 
 
 /*Livros interativos*/
-#corpo{
+#corpo {
     background-color: #FFFDDE;
     padding-top: 5%;
     padding-bottom: 10%;
-    min-height:100vh
+    min-height: 100vh
 }
 
 .li {
@@ -166,7 +169,7 @@
     color: #685ed5;
     margin: 0 auto;
     text-align: center;
-    text-shadow:  #f5c7f3;
+    text-shadow: #f5c7f3;
     font-size: 50px;
 }
 
@@ -176,45 +179,51 @@
     background-color: #E7FBBE;
 }
 
-#card{
+#card {
     border-radius: 20px;
     display: grid;
     justify-content: center;
     justify-items: center;
-    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     box-shadow: 0 20px 40px rgba(0, 0, 0, 0.58);
     background-color: white;
 }
-#nomeCard{
+
+#nomeCard {
     padding-left: 35%;
 }
 
-#cardBody{
+#cardBody {
     border: none;
-    
+
 }
 
 .profile img {
     width: 68px;
     height: 68px;
     border-radius: 50%;
-   
+
 }
 
-#cardMeio{
+#cardMeio {
     border-left: 2px dotted lightgrey;
     border-right: 2px dotted lightgrey
 }
 
-.corpo{
+.corpo {
     padding: 40px;
 }
 
 /*Quem Somos*/
 #recode {
-    margin-left: 45%;
-    margin-right: 45%;
+    margin: auto;
+    display: block;
     padding-top: 10px;
+}
+
+.box {
+    display: flex;
+    justify-content: center;
 }
 
 #trioMellow {
@@ -270,9 +279,8 @@
 
 /*Admin*/
 #bodyAdmin {
-    background-color: #FFFDDE;
-    min-height: 100vh;
-    min-width: 100vw;
+    padding-top: 2%;
+    min-height: 100vh
 }
 
 #btnAdmin {
@@ -288,22 +296,22 @@
 }
 
 #usuario {
-    background-color:#D9D7F1;
+    background-color: #D9D7F1;
 }
 
 #login {
-    background-color:#D9D7F1;
+    background-color: #D9D7F1;
 }
 
 #livrosInt {
-    background-color:#D9D7F1;
+    background-color: #D9D7F1;
 }
 
 #livros {
-    background-color:#D9D7F1;
+    background-color: #D9D7F1;
 }
 
 #tamanho {
-    background-color:#D9D7F1;
+    background-color: #D9D7F1;
     width: 24rem;
 }
